# deepsort

./: CMakeLists.txt  README.md
demo/c++/: CMakeLists.txt  main.cpp  util.h
demo/c++/detection/include/: Detector.h
demo/c++/detection/src/: Darknet.cpp  Detector.cpp  darknet_parsing.cpp
demo/python/: test.py
thirdpart/libtorch/: build-hash  build-version
thirdpart/libtorch/include/caffe2/core/: macros.h
thirdpart/libtorch/lib/: libfmt.so.6  libuv.so.1
thirdpart/libtorch/share/cmake/Caffe2/: Caffe2Targets-release.cmake  Caffe2Targets.cmake
tracking/: CMakeLists.txt
tracking/include/: CastDataType.h  DeepSORT.h
tracking/src/: DeepSORT.cpp  Extractor.cpp  Extractor.h  TrackerManager.h
